--- a/newPGAtips.html
+++ b/newPGAtips.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PGAtipsBest</title>
     <!-- <link rel="stylesheet" href="PGatip.css"> -->
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />  
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>  
+    <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />  
+    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>   -->
     <style>
         html , body{
     height: 100%;
@@ -20,9 +20,12 @@
         border: 5px solid transparent;
         border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
         border-image-slice: 1;
-        background-color: rgb(200, 200,200);
+        background-color: rgb(214, 178, 178);
         padding: 10px;
         letter-spacing: normal;
+
+        min-width: 500px;
+        min-height: auto;
 
         display: flex;
         justify-content: center;
@@ -31,13 +34,23 @@
 }
     .btn{
         padding: 5px;
+        padding-left: 30px;
+        padding-right: 30px;
         margin: 20px;
         border-radius: 20cm;
         color: white;
         background-image: linear-gradient(to right ,red , blue , grey , black , violet , orange);
         height: inherit;
         width: inherit;
-        transition: scale 3s;
+        border: 0px;
+        height: 100px;
+        width: inherit;
+        transition: scale 1s;
+    }
+    button a{
+        color: white;
+        font-size: xx-large;
+        letter-spacing: 0.3rem;
     }
     .btn:hover{
         scale: 5;
@@ -47,19 +60,14 @@
 </head>
 <body>
 <div class="block">
-    <py-script>
-        print("WELCOME TO THUNGA'S TIP CALCULATOR!!")
-
-        bill = float(input("what is the total bill?"))
-        print(f"${bill}")
-        tip = int(input("How much tip would you like to give 10 12 15: ")) 
-        print(f"{tip}%")
-        people = int(input("how many people will split the bill?: "))
-        print(people)
-        x = float((bill + (tip/100)*bill)/people)
-
-        print(f"Each person should pay: {x}")
-    </py-script> 
+    <script>
+        alert("WELCOME! \nPress Enter")
+        let bill = prompt("Enter total bill amount : ")
+        let tip = prompt("enter a % that you would like to tip : ")
+        let people = prompt("Total No. of guests ? ")
+        let x = (bill + (tip/100)*bill)/people
+        alert("You should tip : Rupees" + x)
+    </script> 
     <button class="btn">
         <a href="https://youtu.be/dQw4w9WgXcQ?feature=shared"> Click here for full reciept.</a>
     </button>  
